@@ -1,3 +1,4 @@
+- rewrite string2addr()
 - routeMail, route, routeFile must be "the same"
 - getArea(TP_LOCAL|TP_ECHO|TP_BAD|TP_DUPE|TP_FILE)
 - fix "0" groups (to NULL)
