@@ -10,6 +10,7 @@ max:
 * tparser support command via cmdline (run tparser --help)
 * carbonAddr token
 * route flavour nopack ...
+* addToSeen token
 
 ----- cvs ci ------
 Sat Jun  3 21:57:51 NOVST 2000
